--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -17,7 +17,8 @@
     display: block;
     margin: auto;
     max-width: 314px;
-    padding: 18px 116px;
+    padding: 18px;
+    width: 100%;
 
     box-shadow: 0px 8px 10px #00000024;
 
